fix: Add row gap

--- a/packages/form-js-viewer/assets/form-js-base.css
+++ b/packages/form-js-viewer/assets/form-js-base.css
@@ -992,6 +992,7 @@
 .fjs-container .fjs-form-field-table {
   display: flex;
   flex-direction: column;
+  row-gap: 4px;
 }
 
 .fjs-container .fjs-table-middle-container {
